--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,9 @@ matrix:
       elixir: 1.3.1
     - otp_release: 19.0
       elixir: 1.3.1
+
+script: mix coveralls.travis
+
+after_script:
+  - mix deps.get --only docs
+  - MIX_ENV=docs mix inch.report
